spacing fix

--- a/styles.css
+++ b/styles.css
@@ -678,6 +678,7 @@ h1{
       .productLines{
         flex-wrap:wrap;
         width: 90%;
+        margin-bottom: 0%;
       }
       .imgA{
         width:48%;
